gamescope: edid parsing fails on devices with incorrect data block sizes
With devices like the Aya Neo Geek and the Win Max 2 recent changes to gamescope regarding libdisplay-info break gamescope. There are devices out there that are known to have incomplete or broken EDID and this is one of those cases.
By patching the EDID a user was able to workaround the problem and get gamescope to work. Before I try to figure out EDID patches and/or ask vendors to update their EDID to fix this problem (Probably still a good idea anyway..) I figured I'd see if there is something that can be done with libdisplay-info to resolve this issue. I'm sure we'll be seeing more devices with bad EDID since that seems to be all too common.
See here: https://github.com/ValveSoftware/gamescope/issues/864#issuecomment-1607373105